# HornetBot

./: .gitignore  Hornet.py  README.md  config.py  pyproject.toml  requirements.txt  save.py  templateconfig.json
components/: auth.py  embeds.py  emojiUtil.py  helpcmd.py  src.py  twitch.py
modules/: TODO  __init__.py  changelog.py  customCommands.py  gameTracking.py  hkcListener.py  moderation.py  module_guide.md  raceutil.py  reactroles.py  srcManagement.py  srroles.py
src/: Hornet.py  config.py
src/components/: embeds.py  emojiUtil.py  helpcmd.py  log.py  src.py  twitch.py
src/modules/: changelog.py  customCommands.py  gameTracking.py  hkcListener.py  moderation.py  module_guide.md  raceutil.py  srcManagement.py  srroles.py
