[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "HornetBot"
authors = [
    {name = "Jamie", email = "jamie.on.twitch@gmail.com"},
]
description = "An open & extensible discord bot"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["discord"]
license = {text = "LGPLv2.1"}
version = "1.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "speedruncompy==0.0.4",
    "discord.py~=2.3.1",
    "emoji~=2.11.1"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src"
]

[project.urls]
Homepage = "https://github.com/ManicJamie/HornetBot"
Repository = "https://github.com/ManicJamie/HornetBot.git"
"Bug Tracker" = "https://github.com/ManicJamie/HornetBot/issues"